kubernetes/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django
spec:
  type: LoadBalancer
  selector:
    app: django
  ports:
    - port: 80
      targetPort: 80
